Correcting screen
Signed-off-by: nguem <nguemechieu@live.com>